2005-05-23  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm, CLI.pm, Services.pm: Roll back last two commits.

2005-05-23  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm, CLI.pm, Services.pm: Adjust Fink:: importing to
	match what is used.

2005-05-23  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Use new_from_properties as back end for new_with_path

2005-05-22  Dave Morrison  <dmrrsn@sourceforge.net>

	* Bootstrap.pm: recognize 10.4.1; also, say that 10.4 is "supported
	and tested"

2005-05-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Finish fieldname all-lc fixes.

2005-05-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Move .info Shlibs syntax check into
	validate_info_component. Move Provides and Shlibs checks out of
	field loop. Control scoping of $field. Remember read_properties
	returns all-lc keys. Better pkglist-field syntax warning.

2005-05-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix pkglist-field syntax check when no conditional.

2005-05-20  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Check pkglist-field syntax.

2005-05-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Fix bug with is_aptgetable changing $_.

2005-05-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Package.pm: Load apt DB as needed, don't try caching it.

2005-05-18  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm, Package.pm: Move store_rename into Services.

2005-05-16  Daniel Macks  <dmacks@netspace.org>

	* *: verbosity_level() is now a $config object method

2005-05-16  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Refactor and make a more coherent verbosity_level

2005-05-14  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Disable copyfile when creating tarballs (otherwise we get
	nasty dot-underscore files if we expand them with Fink's tar).

2005-05-11  Dave Morrison  <dmrrsn@sourceforge.net> (thanks to msachs)
